# redcrew_test

./: .env.sample  .gitignore  DEV_COMMAND.md  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt
src/: api.py  main.py
src/auth/: __init__.py  auth_router.py  crud.py  schemas.py  user_exceptions.py  validators.py
src/auth/security/: __init__.py  exceptions.py  interfaces.py  token_manager.py  utils.py
src/config/: __init__.py  dependecies.py  settings.py
src/database/: __init__.py  engine.py
src/database/models/: __init__.py  travel_project.py  user.py
src/migrations/: env.py
src/migrations/versions/: ea43d4055129_initial_migration.py  f9eb3fca4adf_auth_models.py
src/travel/: __init__.py  schemas.py
src/travel/place/: __init__.py  crud.py  exceptions.py  place_router.py
src/travel/project/: __init__.py  crud.py  exceptions.py  travel_router.py
src/travel/services/: __init__.py  place_service.py
