[project]
name = "redcrew-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.15.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "respx>=0.22.0",
]

[tool.black]
line-length = 79
target-version = ["py313"]
exclude = '''
/(
    migrations
  | venv
  | .venv
  | __pycache__
)/
'''
